--- a/task_1.html
+++ b/task_1.html
@@ -40,7 +40,7 @@
         <img src="logo.jpg" alt="This is a logo" width="300px"  height="300px"><br>
 
         <!--Image Download button-->
-        <a href="logo.jpg" download>
+        <a href="logo.jpg" download="logo">
             <button>Download</button>
         </a>
 
